--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-https://smsh01.weebly.com/
-https://smsh11.weebly.com/
+<a href="https://smsh01.weebly.com/">https://smsh01.weebly.com/</a>
+<a href="https://smsh11.weebly.com/">https://smsh11.weebly.com/</a>
